# terror_and_fdi

./: .gitignore  pyproject.toml
data/interim/: cities_processed.csv  country_metadata_processed.csv  fdi_imf_processed.csv  gmd_processed.csv  gtd_processed.cscv  gtd_processed_interpolated.csv  pwt_processed.csv  stat_tax_rate_processed.csv  state_based_violence_processed.csv  v_dem_processed.csv  wb_data_processed.csv
data/interim/stata/: terrorism_fdi_pvar_preparation.do
data/processed/: countries_continuous_fdi_by_start_to_2020-Q4.csv  countries_continuous_fdi_by_start_to_2020-Q4_with_metadata.csv  fdi_quarterly.dta  summary_continuous_fdi_by_start_to_2020-Q4.csv
data/stata/: terrorism_fdi_pvar.do  terrorism_fdi_pvar_log.smcl  terrorism_fdi_pvar_updated.do  terrorism_fdi_pvar_v2.do
scripts/: cleaning.py  gen_and_label_vars.py  gen_vars.txt  graphs success rates.py  gtd2.py  gtd3.py
scripts/old/: combinations_wgi.py  country_lists.py  gmd_test.py  gtd_cleaning.py  new_data.py  regressions.py  regressions_gtioriginal.py  ucdp_cleaning.py  unctad.py
src/terror_and_fdi/: graphs.py
src/terror_and_fdi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terror_and_fdi/config/: paths.py
src/terror_and_fdi/data_cleaning/: cleaning_raw_sources.py
src/terror_and_fdi/data_fetching/: wbdata.py
src/terror_and_fdi/data_requests/: gmd_api.py  ucdp_api.py  wbdata_api.py
